--- a/templates/header.html
+++ b/templates/header.html
@@ -251,10 +251,10 @@
 
           <li class="menu-has-children"><a href="/data-enrichment-services">Enhance</a>
             <ul>
-              <li><a href="/data-append/email-appending">Email Append</a></li>
-              <li><a href="/data-append/data-appending">Data Append</a></li>
-              <li><a href="/data-verification">Data Verification</a></li>
-              <li><a href="/data-profiling">Data Profiling</a></li>
+              <li><a href="/email-appending/">Email Append</a></li>
+              <li><a href="/data-appending/">Data Append</a></li>
+              <li><a href="/data-verification/">Data Verification</a></li>
+              <li><a href="/data-profiling/">Data Profiling</a></li>
               <li><a href="/data-intelligence">Data Management</a></li>
               <li><a href="/data-cleansing">Data Cleansing</a></li>
             </ul>
@@ -267,5 +267,7 @@
       </nav>
     </div>
     <div class="clearfix"></div>
+    {% block extra_css %}
+    {% endblock %}
   </header>
 </div>
