--- a/templates/b2b-email-list.html
+++ b/templates/b2b-email-list.html
@@ -11,7 +11,7 @@
               <img  src="/static/assets/img/top-phone.png" alt="phone" />
             </div>-->
       <div class="right-share">
-        <a href="tel:8777550023" target="_blank">(877) 755-0023 </a>
+        <a href="tel:8777550023" target="_blank">307-213-7098 </a>
         <div class="triangle-right"></div>
       </div>
 
@@ -22,7 +22,7 @@
               <img  src="/static/assets/img/top-mail.png" alt="Mail" />
             </div>-->
       <div class="right-share">
-        <a href="mailto:info@spanglobalservices.com" target="_blank">info@spanglobalservices.com</a>
+        <a href="mailto:info@affluencebusiness.com" target="_blank">info@affluencebusiness.com</a>
         <div class="triangle-right"></div>
       </div>
     </li>
