--- a/templates/header.html
+++ b/templates/header.html
@@ -18,7 +18,7 @@
   <meta property="og:url" content="/b2b-email-list">
   <meta property="og:title" content="Buy B2B Email List | 100% Opt-in B2B Email Database | SGS">
   <meta property="og:description" content="The quality of your B2B email list can make or break your campaign. So, trust accurate and verified contact data from Span Global Services.">
-  <meta property="og:image" content="/static/assets/img/logo.png">
+  <meta property="og:image" content="/static/assets/img/new-affluence-logo.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -137,6 +137,33 @@
     }
   }
 </style>
+    <style>
+        .nav-menu .high-text a {
+            color: #036532;
+            font-weight: bold;
+            font-size: 13px;
+        }
+
+        .nav-menu ul li a {
+            padding: 7px;
+        }
+
+        .nav-menu ul li ul li a {
+            padding: 7px;
+        }
+
+        .nav-menu ul li ul li a:hover {
+            padding: 7px;
+            background-color: #1e8c09;
+            ;
+            color: #fff;
+        }
+
+        .nav-menu ul li ul {
+            margin: 0;
+            padding: 0px;
+        }
+    </style>
 
 <div class="hs">
   <header id="header">
@@ -159,7 +186,7 @@
       <div class="clearfix"></div>
 
       <div id="logo" class="pull-left">
-        <a href="/" alt="Span Global Services" title="Span Global Services"><img src="/static/assets/img/logo.png" alt="Span Global Services Logo"></a>
+        <a href="/" alt="Span Global Services" title="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" alt="Span Global Services Logo"></a>
       </div>
 
       <nav id="nav-menu-container">
