--- a/templates/index.html
+++ b/templates/index.html
@@ -24,18 +24,18 @@
     />
     <meta name="keywords" content="Buy Email Address List, Buy Email List, Buy Targeted Email Lists, USA Email Lueads, Business to Business Database" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://www.spanglobalservices.com" />
-    <link rel="alternate" hreflang="en-US" href="https://www.spanglobalservices.com" />
+
+
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.spanglobalservices.com/">
     <meta property="og:title" content="Marketing Data Intelligence to Fuel Growth - Span Global Services">
     <meta property="og:description" content="Span Global Services is the industry leader for business mailing lists and sales leads. Get access to 25+ million businesses data across the world.">
     <meta property="og:image" content="/static/assets/img/logo.png">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.spanglobalservices.com/">
+    <meta property="twitter:url" content="https://www.affluencebusiness.com/">
     <meta property="twitter:title" content="Marketing Data Intelligence to Fuel Growth - Span Global Services">
     <meta property="twitter:description" content="Span Global Services is the industry leader for business mailing lists and sales leads. Get access to 25+ million businesses data across the world.">
-    <meta property="twitter:image" content="/static/assets/img/logo.png">
+    <meta property="twitter:image" content="/static/assets/img/new-affluence-logo.png">
     <link href="/static/assets/img/favicon.png" rel="icon">
     <link href="/static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet" disabled>
@@ -103,9 +103,9 @@
                 <p>&nbsp;&nbsp;Pay With Crypto, We are now accepting crypto currency payments </p>
             </div>
             <div class="container-fluid">
-                <div class="top-right-contact"> <span class="top-phone"> <a href="tel:8777550023" class="big-text">(877) 755-0023</a> <a href="mailto:info@spanglobalservices.com" class="small-text">info@spanglobalservices.com </a> </span> </div>
+                <div class="top-right-contact"> <span class="top-phone"> <a href="tel:8777550023" class="big-text">307-213-7098</a> <a href="mailto:info@affluencebusiness.com" class="small-text">info@affluencebusiness.com </a> </span> </div>
                 <div class="clearfix"></div>
-                <div id="logo" class="pull-left"> <a href="/" alt="Span Global Services" title="Span Global Services"><img src="/static/assets/img/logo.png" alt="Span Global Services Logo"></a> </div>
+                <div id="logo" class="pull-left"> <a href="/" alt="Span Global Services" title="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" alt="Span Global Services Logo"></a> </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
                         <li class="menu-has-children"><a href="/company-overview">Company</a>
@@ -202,12 +202,12 @@
     <div class="sticky-container">
         <ul class="sticky">
             <li> <i class="fa fa-phone hoverobj"></i>
-                <div class="right-share"> <a href="tel:8777550023" target="_blank">(877) 755-0023 </a>
+                <div class="right-share"> <a href="tel:8777550023" target="_blank">307-213-7098 </a>
                     <div class="triangle-right"></div>
                 </div>
             </li>
             <li> <i class="fa fa-envelope hoverobj"></i>
-                <div class="right-share"> <a href="mailto:info@spanglobalservices.com" target="_blank">info@spanglobalservices.com</a>
+                <div class="right-share"> <a href="mailto:info@affluencebusiness.com" target="_blank">info@affluencebusiness.com</a>
                     <div class="triangle-right"></div>
                 </div>
             </li>
@@ -733,12 +733,12 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="col-lg-4 col-md-4 mt-3 mb-0 footer-contact"> <strong class="h4">USA (Head Office)</strong>
-                        <p>2710, Media Center Dr, Bldg#6, Suite 120, </br>Los Angeles, CA 90065<br /> <strong>Email :</strong><a href="mailto:info@spanglobalservices.com">info@spanglobalservices.com</a><br /> <strong>Phone :</strong><a href="tel:8777550023">(877) 755-0023</a>                            </p>
+                        <p>2710, Media Center Dr, Bldg#6, Suite 120, </br>Los Angeles, CA 90065<br /> <strong>Email :</strong><a href="mailto:info@affluencebusiness.com">info@affluencebusiness.com</a><br /> <strong>Phone :</strong><a href="tel:8777550023">307-213-7098</a>                            </p>
                     </div>
                     <div class="col-lg-4 col-md-4 mt-3 footer-contact"> <strong class="h4">Singapore</strong>
                         <p>Level 39, Marina Bay, Financial Center Tower 2, </br>10 Marina Boulevard, Singapore-018983<br /> <strong>Phone :</strong><a href="tel:8777550023">+65-9662-7237</a> </p>
                     </div>
-                    <div class="col-lg-4 col-md-4 mt-4 f-social"> <a href="/" alt="Span Global Services"><img src="/static/assets/img/logo-white.png" class="respo-img" alt="Span Global Services Logo"></a> </div>
+                    <div class="col-lg-4 col-md-4 mt-4 f-social"> <a href="/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" class="respo-img" alt="Span Global Services Logo"></a> </div>
                     <div class="col-lg-8 col-md-8 mt-4 footer-contact">
                         <div class="copyright"> &copy; 2023 Span Global Services - <a href="https://www.championsgroup.com/" target="_blank">A Champions Group Company</a>, All rights reserved. </div>
                     </div>
@@ -752,7 +752,7 @@
                 <div class="modal-header flex-column position-relative"> <button type="button" class="close" data-dismiss="modal">×</button>
                     <div class="clearfix"></div>
                 </div>
-                <div class="col-lg-12 text-center modal-sub-header oxy-font"> <a href="/" alt="Span Global Services"><img src="/static/assets/img/logo.png" alt="home" title="home" class="popup-logo" /></a>
+                <div class="col-lg-12 text-center modal-sub-header oxy-font"> <a href="/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" alt="home" title="home" class="popup-logo" /></a>
                     <h4 class="modal-title">Send Us Your Requirement</h4>
                     <div>
                         <p>Our growth experts will connect with you to fulfill your needs</p>
@@ -803,7 +803,7 @@
                 <div class="modal-header flex-column position-relative"> <button type="button" class="close" data-dismiss="modal">×</button>
                     <div class="clearfix"></div>
                 </div>
-                <div class="col-lg-12 text-center modal-sub-header oxy-font"> <a href="/" alt="Span Global Services"><img src="/static/assets/img/logo.png" alt="home" title="home" class="popup-logo" /></a>
+                <div class="col-lg-12 text-center modal-sub-header oxy-font"> <a href="/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" alt="home" title="home" class="popup-logo" /></a>
                     <h4 class="modal-title">Get Free Append Match Test Today!</h4>
                 </div>
                 <div class="modal-body">
@@ -849,7 +849,7 @@
                 <div class="modal-header flex-column position-relative"> <button type="button" class="close" data-dismiss="modal">×</button>
                     <div class="clearfix"></div>
                 </div>
-                <div class="col-lg-12 text-center modal-sub-header oxy-font"> <a href="/" alt="Span Global Services"><img src="/static/assets/img/logo.png" alt="home" title="home" class="popup-logo" /></a>
+                <div class="col-lg-12 text-center modal-sub-header oxy-font"> <a href="/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" alt="home" title="home" class="popup-logo" /></a>
                     <h4 class="modal-title">Our Top Data Expert is just a click away!</h4>
                 </div>
                 <div class="modal-body">
@@ -998,11 +998,11 @@
             "@context": "https://schema.org",
             "@type": "Organization",
             "name": "Span Global Services",
-            "url": "https://www.spanglobalservices.com/",
-            "logo": "/static/assets/img/logo.png",
+            "url": "/",
+            "logo": "/static/assets/img/new-affluence-logo.png",
             "contactPoint": {
                 "@type": "ContactPoint",
-                "telephone": "+1 (877) 755-0023",
+                "telephone": "+1 307-213-7098",
                 "contactType": "customer service",
                 "contactOption": "TollFree",
                 "areaServed": "US",
