--- a/templates/footer.html
+++ b/templates/footer.html
@@ -47,8 +47,8 @@
         <div class="col-lg-4 col-md-4 mt-3 mb-0 footer-contact">
           <strong class="h4">USA (Head Office)</strong>
           <p>2710, Media Center Dr, Bldg#6, Suite 120, </br>Los Angeles, CA 90065<br />
-            <strong>Email :</strong><a href="mailto:info@spanglobalservices.com">info@spanglobalservices.com</a><br />
-            <strong>Phone :</strong><a href="tel:8777550023">(877) 755-0023</a>
+            <strong>Email :</strong><a href="mailto:info@affluencebusiness.com">info@affluencebusiness.com</a><br />
+            <strong>Phone :</strong><a href="tel:8777550023">307-213-7098</a>
           </p>
         </div>
 
@@ -60,7 +60,7 @@
         </div>
 
         <div class="col-lg-4 col-md-4 mt-4 f-social">
-          <a href="https://www.spanglobalservices.com/" alt="Span Global Services"><img src="/static/assets/img/logo-white.png" class="respo-img" alt="Span Global Services Logo"></a>
+          <a href="https://www.spanglobalservices.com/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" class="respo-img" alt="  Logo"></a>
         </div>
 
         <div class="col-lg-8 col-md-8 mt-4 footer-contact">
@@ -86,7 +86,7 @@
 
       </div>
       <div class="col-lg-12 text-center modal-sub-header oxy-font">
-        <a href="https://www.spanglobalservices.com/" alt="Span Global Services"><img src="/static/assets/img/logo.png" alt="home" title="home" class="popup-logo" /></a>
+        <a href="https://www.spanglobalservices.com/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" alt="home" title="home" class="popup-logo" /></a>
         <h4 class="modal-title">Send Us Your Requirement</h4>
         <div>
           <p>Our growth experts will connect with you to fulfill your needs</p>
@@ -192,7 +192,7 @@
 
       </div>
       <div class="col-lg-12 text-center modal-sub-header oxy-font">
-        <a href="https://www.spanglobalservices.com/" alt="Span Global Services"><img src="/static/assets/img/logo.png" alt="home" title="home" class="popup-logo" /></a>
+        <a href="https://www.spanglobalservices.com/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" alt="home" title="home" class="popup-logo" /></a>
         <h4 class="modal-title">Get Free Append Match Test Today!</h4>
       </div>
 
@@ -288,7 +288,7 @@
 
       </div>
       <div class="col-lg-12 text-center modal-sub-header oxy-font">
-        <a href="https://www.spanglobalservices.com/" alt="Span Global Services"><img src="/static/assets/img/logo.png" alt="home" title="home" class="popup-logo" /></a>
+        <a href="https://www.spanglobalservices.com/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" alt="home" title="home" class="popup-logo" /></a>
         <h4 class="modal-title">Our Top Data Expert is just a click away!</h4>
       </div>
 
@@ -355,7 +355,7 @@
           </form>
 
           <div class="text-center">
-            <a href="https://www.spanglobalservices.com/privacy">"Your privacy is important to us"</a>
+            <a href="/privacy/">"Your privacy is important to us"</a>
           </div>
 
         </div>
@@ -415,12 +415,12 @@
 }
 </style>
 
-<div class="whats-phone-wrapper">
+<!--<div class="whats-phone-wrapper">-->
 
- 			<a class="phone-cyc" href="#" data-toggle="modal" data-target="#send-message">
- 				<img class="cyc-wp-temp" src="/static/assets/img/chatnow.webp" alt="chat now">
- 			</a>
- </div>
+<!-- 			<a class="phone-cyc" href="#" data-toggle="modal" data-target="#send-message">-->
+<!-- 				<img class="cyc-wp-temp" src="/static/assets/img/chatnow.webp" alt="chat now">-->
+<!-- 			</a>-->
+<!-- </div>-->
 <script>
 	$(document).ready(function(){
         // Add minus icon for collapse element which is open by default
