--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<section class="inner-banner about-us-banner"> <div class="overlay"> <div class="container"> <div class="row"> <div class="col-lg-6 mb-3 wow fadeInLeft"></div> <div class="col-lg-6 mb-3 wow fadeInLeft"> <h1>Disruptive Growth Stories Begin with the Philosophy of Data Intelligence-</h1> <p>Make your go-to-market journey take an insightful data-driven turn.</p> <div class="mt-4"> <a href="#" data-toggle="modal" data-target="#send-message" class="white-br-btn circle-fa">Book A Free Data Consultation Now &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a> </div> </div> </div> </div> </div></section>
 
  <main id="main"> 
 
