--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,80 +1,42 @@
 
 <footer id="footer">
-  <div class="footer-top">
-    <div class="container">
-      <div class="row">
+        <div class="footer-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-md-8 mt-5 footer-links">
+                        <a href="/privacy/">Privacy Policy</a> <a href="/refund-policy/">Refund Policy</a>
+                        <a href=""></a>
+                        <a href=""></a>
 
 
-        <div class="col-lg-8 col-md-8 mt-5 footer-links">
-          <a href="https://www.spanglobalservices.com/privacy">Privacy Policy</a>
-          <a href="https://www.spanglobalservices.com/refund-policy">Refund Policy</a>
-          <a href="https://www.spanglobalservices.com/terms">Terms &amp; Conditions</a>
-          <a href="https://www.spanglobalservices.com/resellers">Reseller Program</a>
-          <a href="https://www.spanglobalservices.com/blog/">Blog</a>
-          <a href="https://www.spanglobalservices.com/testimonials">Testimonials</a>
-          <a href="https://www.spanglobalservices.com/do-not-sell-my-data">Do Not Sell My Data</a>
-          <a href="https://www.spanglobalservices.com/write-for-us">Write For Us</a>
-          <a href="https://www.spanglobalservices.com/do-not-call-policy">Do Not Call Policy</a>
-          <a href="https://www.spanglobalservices.com/clients">Clients</a>
-          <a href="https://www.spanglobalservices.com/corporate-capabilities">Corporate Capabilities</a>
+                        <a
+                            href=""></a> <a href=""></a> <a href=""></a> <a href="/corporate-capabilities/"></a>                            </div>
+                    <div class="col-lg-4 col-md-4 mt-5 f-social">
+                        <div class="social-links-f "> <a href="" alt="Facebook" target="_blank">
+                            <img src="/static/assets/img/fb.png" alt="Facebook" class="respo-img" /> </a>
+                            <a href=""
+                                alt="Twitter" target="_blank">
+                                <img src="/static/assets/img/tw.png" alt="Twitter" class="respo-img" />
+                            </a> <a href="" alt="LinkedIn" target="_blank"> <img src="/static/assets/img/in.png" alt="LinkedIn" class="respo-img" /> </a>
+                            <a href="" alt="YouTube" target="_blank"> <img src="/static/assets/img/youtube.png" alt="YouTube" class="respo-img" /> </a> <a href="https://www.instagram.com/spanglobalservices/ "
+                                alt="Instagram" target="_blank"> <img src="/static/assets/img/insta.png" alt="Instagram" class="respo-img" /> </a> </div>
+                    </div>
+                    <div class="clearfix"></div>
+                    <div class="col-lg-4 col-md-4 mt-3 mb-0 footer-contact"> <strong class="h4">United States</strong>
+                        <p>1309 COFFEEN AVENUE STE 1200 SHERIDAN,  </br> WY 82801<br /> <strong>Email :</strong><a href="mailto:info@affluencebusiness.com">info@affluencebusiness.com</a><br /> <strong>Phone :</strong><a href="tel:8777550023">307-213-7098</a>                            </p>
+                    </div>
+                    <div class="col-lg-4 col-md-4 mt-3 footer-contact"> <strong class="h4"></strong>
+                        <p> </br><br /> <strong></strong><a href="tel:8777550023"></a> </p>
+                    </div>
+                    <div class="col-lg-4 col-md-4 mt-4 f-social"> <a href="/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" class="respo-img" alt="Span Global Services Logo"></a> </div>
+                    <div class="col-lg-8 col-md-8 mt-4 footer-contact">
+                        <div class="copyright"> &copy; 2023 Affluences Business inc - <a href="https://www.championsgroup.com/" target="_blank">A Champions Group Company</a>, All rights reserved. </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <div class="col-lg-4 col-md-4 mt-5 f-social">
-          <div class="social-links-f ">
-            <a href="https://www.facebook.com/spanglobalservices" alt="Facebook" target="_blank">
-              <img src="/static/assets/img/fb.png" alt="Facebook" class="respo-img" />
-            </a>
-            <a href="https://twitter.com/spanglobal" alt="Twitter" target="_blank">
-              <img src="/static/assets/img/tw.png" alt="Twitter" class="respo-img" />
-            </a>
-            <a href="https://www.linkedin.com/company/span-global-services" alt="LinkedIn" target="_blank">
-              <img src="/static/assets/img/in.png" alt="LinkedIn" class="respo-img" />
-            </a>
-            <a href="https://www.youtube.com/user/SpanGlobalServices" alt="YouTube" target="_blank">
-              <img src="/static/assets/img/youtube.png" alt="YouTube" class="respo-img" />
-            </a>
-            <a href="https://www.instagram.com/spanglobalservices/ " alt="Instagram" target="_blank">
-              <img src="/static/assets/img/insta.png" alt="Instagram" class="respo-img" />
-            </a>
-
-          </div>
-
-
-        </div>
-
-        <div class="clearfix"></div>
-
-        <div class="col-lg-4 col-md-4 mt-3 mb-0 footer-contact">
-          <strong class="h4">USA (Head Office)</strong>
-          <p>2710, Media Center Dr, Bldg#6, Suite 120, </br>Los Angeles, CA 90065<br />
-            <strong>Email :</strong><a href="mailto:info@affluencebusiness.com">info@affluencebusiness.com</a><br />
-            <strong>Phone :</strong><a href="tel:8777550023">307-213-7098</a>
-          </p>
-        </div>
-
-        <div class="col-lg-4 col-md-4 mt-3 footer-contact">
-          <strong class="h4">Singapore</strong>
-          <p>Level 39, Marina Bay, Financial Center Tower 2, </br>10 Marina Boulevard, Singapore-018983<br />
-            <strong>Phone :</strong><a href="tel:8777550023">+65-9662-7237</a>
-          </p>
-        </div>
-
-        <div class="col-lg-4 col-md-4 mt-4 f-social">
-          <a href="https://www.spanglobalservices.com/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" class="respo-img" alt="  Logo"></a>
-        </div>
-
-        <div class="col-lg-8 col-md-8 mt-4 footer-contact">
-          <div class="copyright">
-            &copy; 2023 Span Global Services - <a href="https://www.championsgroup.com/" target="_blank">A Champions Group Company</a>, All rights reserved.
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-
-</footer><!-- End Footer -->
+    </footer>
+<!-- End Footer -->
 <div id="send-message" class="modal fade" role="dialog">
   <div class="modal-dialog">
     <!-- Modal content-->
@@ -288,7 +250,7 @@
 
       </div>
       <div class="col-lg-12 text-center modal-sub-header oxy-font">
-        <a href="https://www.spanglobalservices.com/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" alt="home" title="home" class="popup-logo" /></a>
+        <a href="/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" alt="home" title="home" class="popup-logo" /></a>
         <h4 class="modal-title">Our Top Data Expert is just a click away!</h4>
       </div>
 
