--- a/templates/header.html
+++ b/templates/header.html
@@ -168,20 +168,16 @@
 <div class="hs">
   <header id="header">
     <div class="container-fluid crypto-head">
-      <div class="div-hd">
-        <a href="#"><img src="/static/assets/img/i_1.png" alt="icon" /></a>
-        <a href="#"><img src="/static/assets/img/i_2.png" alt="icon" /></a>
-        <a href="#"><img src="/static/assets/img/i_3.png" alt="icon" /></a>
-      </div>
-      <p>&nbsp;&nbsp;Pay With Crypto, We are now accepting crypto currency payments </p>
+
+
     </div>
     <div class="container-fluid">
-      <div class="top-right-contact">
-        <span class="top-phone">
-          <a href="tel:307-213-7098" class="big-text">307-213-7098</a>
-          <a href="mailto:info@affluencebusiness.com" class="small-text">info@affluencebusiness.com </a>
-        </span>
-      </div>
+<!--      <div class="top-right-contact">-->
+<!--        <span class="top-phone">-->
+<!--          <a href="tel:307-213-7098" class="big-text">307-213-7098</a>-->
+<!--          <a href="mailto:info@affluencebusiness.com" class="small-text">info@affluencebusiness.com </a>-->
+<!--        </span>-->
+<!--      </div>-->
 
       <div class="clearfix"></div>
 
@@ -201,14 +197,14 @@
             <ul>
               <li><a href="/total-addressable-market/"><img src="/static/assets/img/Total-Addressable-Market.png" alt="Total-Addressable-Market">&nbsp;Total Addressable Market</a></li>
               <li><a href="/b2b-email-list/"><img src="/static/assets/img/B2B-Sales-Leads.png" alt="B2B-Sales-Leads">&nbsp;B2B Sales Leads</a></li>
-              <li><a href="/database/investors-email-list/"><img src="/static/assets/img/Industry-Wise-Data.png" alt="Investors emaillist">&nbsp;Investors Email List</a></li>
+              <li><a href="/investors-email-list/"><img src="/static/assets/img/Industry-Wise-Data.png" alt="Investors emaillist">&nbsp;Investors Email List</a></li>
               <li class="menu-has-children"><a href="/technology-lists/"><img src="/static/assets/img/Technology-Data.png" alt="Technology-Data">&nbsp;Technology Data</a>
                 <ul>
-                  <li><a href="/technology-lists/as-400-users-list">&#9656;&nbsp;AS/400 Users List</a>
+                  <li><a href="/as-400-users-list/">&#9656;&nbsp;AS/400 Users List</a>
                   </li>
-                  <li><a href="/technology-lists/amazon-web-services-users-list">&#9656;&nbsp;AWS Users List</a>
+                  <li><a href="/amazon-web-services-users-list/">&#9656;&nbsp;AWS Users List</a>
                   </li>
-                  <li><a href="/technology-lists/crm-users-list">&#9656;&nbsp;CRM Users List</a>
+                  <li><a href="/crm-users-list/">&#9656;&nbsp;CRM Users List</a>
                   </li>
                   <li><a href="/technology-lists/erp-users-list">&#9656;&nbsp;ERP Users List</a>
                   </li>
@@ -289,7 +285,7 @@
           
           
           <li><a href="/contact-us#contactform" class="scrollto">Contact Us</a></li>
-          <li><a href="/datasets"><img src="/static/assets/img/Explore-Data-Card.gif" alt="Explore Data Card" title="Explore Data Card" class="respo-img"></a></li>
+<!--          <li><a href="/datasets"><img src="/static/assets/img/Explore-Data-Card.gif" alt="Explore Data Card" title="Explore Data Card" class="respo-img"></a></li>-->
         </ul>
       </nav>
     </div>
