--- a/templates/total-addressable-market.html
+++ b/templates/total-addressable-market.html
@@ -2,6 +2,45 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<section class="inner-banner tam-banner pos-rel">
+    <div class="overlay3">
+    	<div class="container">
+            <div class="row">
+              <div class="mx-700">
+              	<div class="col-lg-12 text-center mb-3 wow fadeInLeft">
+                    <h1>Find Accurate Lead Data To Measure Your Total Addressable Market<br/>
+(TAM)</h1>
+                    <p>Calculate market potential by measuring<br/>the most promising territories and active decision-makers.</p>
+
+              	</div>
+              </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="section-sec-80-40 pt-0 mt--80 top-layer" >
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 mb-4 wow fadeInLeft">
+          	<div class="green-bg-box">
+                <div class="row">
+                  <div class="col-lg-8 wow fadeInLeft">
+                        <h2 class="shead-sblk text-white mb-3">Book Your Personalized TAM Targeting Session</h2>
+                        <p class="text-white mb-0">Identify the best and most affordable way to capture your Total Addressable Market</p>
+                  </div>
+                  <div class="col-lg-4 mt-3 wow fadeInRight">
+                        <div class="">
+                            <a href="/contact-us/" class="white-br-btn circle-fa">Talk To Us  &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a>
+                        </div>
+
+                  </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </section>
   <main id="main">
   <section class="section-sec-80-40 pt-3" >
       <div class="container">
