--- a/templates/index.html
+++ b/templates/index.html
@@ -98,12 +98,10 @@
     </style>
     <div class="hs">
         <header id="header">
-            <div class="container-fluid crypto-head">
-                <div class="div-hd"> <a href="#"><img src="/static/assets/img/i_1.png" alt="icon" /></a> <a href="#"><img src="/static/assets/img/i_2.png" alt="icon" /></a> <a href="#"><img src="/static/assets/img/i_3.png" alt="icon" /></a>                    </div>
-                <p>&nbsp;&nbsp;Pay With Crypto, We are now accepting crypto currency payments </p>
-            </div>
+
             <div class="container-fluid">
-                <div class="top-right-contact"> <span class="top-phone"> <a href="tel:8777550023" class="big-text">307-213-7098</a> <a href="mailto:info@affluencebusiness.com" class="small-text">info@affluencebusiness.com </a> </span> </div>
+
+<!--                <div class="top-right-contact"> <span class="top-phone"> <a href="tel:8777550023" class="big-text">307-213-7098</a> <a href="mailto:info@affluencebusiness.com" class="small-text">info@affluencebusiness.com </a> </span> </div>-->
                 <div class="clearfix"></div>
                 <div id="logo" class="pull-left"> <a href="/" alt="Span Global Services" title="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" alt="Span Global Services Logo"></a> </div>
                 <nav id="nav-menu-container">
@@ -192,7 +190,7 @@
 
 
                         <li><a href="/contact-us#contactform" class="scrollto">Contact Us</a></li>
-                        <li><a href="/datasets"><img src="/static/assets/img/Explore-Data-Card.gif" alt="Explore Data Card" title="Explore Data Card" class="respo-img"></a></li>
+<!--                        <li><a href="/datasets"><img src="/static/assets/img/Explore-Data-Card.gif" alt="Explore Data Card" title="Explore Data Card" class="respo-img"></a></li>-->
                     </ul>
                 </nav>
             </div>
@@ -723,24 +721,34 @@
         <div class="footer-top">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-md-8 mt-5 footer-links"> <a href="/privacy">Privacy Policy</a> <a href="/refund-policy">Refund Policy</a> <a href="/terms">Terms &amp; Conditions</a> <a href="/resellers">Reseller Program</a>                        <a href="/blog/">Blog</a> <a href="/testimonials">Testimonials</a> <a href="/do-not-sell-my-data">Do Not Sell My Data</a>
+                    <div class="col-lg-8 col-md-8 mt-5 footer-links">
+                        <a href="/privacy/">Privacy Policy</a> <a href="/refund-policy/">Refund Policy</a>
+                        <a href=""></a>
+                        <a href=""></a>
+
+
                         <a
-                            href="/write-for-us">Write For Us</a> <a href="/do-not-call-policy">Do Not Call Policy</a> <a href="/clients">Clients</a> <a href="/corporate-capabilities">Corporate Capabilities</a>                            </div>
+                            href=""></a> <a href=""></a> <a href=""></a> <a href="/corporate-capabilities/"></a>                            </div>
                     <div class="col-lg-4 col-md-4 mt-5 f-social">
-                        <div class="social-links-f "> <a href="https://www.facebook.com/spanglobalservices" alt="Facebook" target="_blank"> <img src="/static/assets/img/fb.png" alt="Facebook" class="respo-img" /> </a> <a href="https://twitter.com/spanglobal"
-                                alt="Twitter" target="_blank"> <img src="/static/assets/img/tw.png" alt="Twitter" class="respo-img" /> </a> <a href="https://www.linkedin.com/company/span-global-services" alt="LinkedIn" target="_blank"> <img src="/static/assets/img/in.png" alt="LinkedIn" class="respo-img" /> </a>                            <a href="https://www.youtube.com/user/SpanGlobalServices" alt="YouTube" target="_blank"> <img src="/static/assets/img/youtube.png" alt="YouTube" class="respo-img" /> </a> <a href="https://www.instagram.com/spanglobalservices/ "
+                        <div class="social-links-f "> <a href="" alt="Facebook" target="_blank">
+                            <img src="/static/assets/img/fb.png" alt="Facebook" class="respo-img" /> </a>
+                            <a href=""
+                                alt="Twitter" target="_blank">
+                                <img src="/static/assets/img/tw.png" alt="Twitter" class="respo-img" />
+                            </a> <a href="" alt="LinkedIn" target="_blank"> <img src="/static/assets/img/in.png" alt="LinkedIn" class="respo-img" /> </a>
+                            <a href="" alt="YouTube" target="_blank"> <img src="/static/assets/img/youtube.png" alt="YouTube" class="respo-img" /> </a> <a href="https://www.instagram.com/spanglobalservices/ "
                                 alt="Instagram" target="_blank"> <img src="/static/assets/img/insta.png" alt="Instagram" class="respo-img" /> </a> </div>
                     </div>
                     <div class="clearfix"></div>
-                    <div class="col-lg-4 col-md-4 mt-3 mb-0 footer-contact"> <strong class="h4">USA (Head Office)</strong>
-                        <p>2710, Media Center Dr, Bldg#6, Suite 120, </br>Los Angeles, CA 90065<br /> <strong>Email :</strong><a href="mailto:info@affluencebusiness.com">info@affluencebusiness.com</a><br /> <strong>Phone :</strong><a href="tel:8777550023">307-213-7098</a>                            </p>
+                    <div class="col-lg-4 col-md-4 mt-3 mb-0 footer-contact"> <strong class="h4">United States</strong>
+                        <p>1309 COFFEEN AVENUE STE 1200 SHERIDAN,  </br> WY 82801<br /> <strong>Email :</strong><a href="mailto:info@affluencebusiness.com">info@affluencebusiness.com</a><br /> <strong>Phone :</strong><a href="tel:8777550023">307-213-7098</a>                            </p>
                     </div>
-                    <div class="col-lg-4 col-md-4 mt-3 footer-contact"> <strong class="h4">Singapore</strong>
-                        <p>Level 39, Marina Bay, Financial Center Tower 2, </br>10 Marina Boulevard, Singapore-018983<br /> <strong>Phone :</strong><a href="tel:8777550023">+65-9662-7237</a> </p>
+                    <div class="col-lg-4 col-md-4 mt-3 footer-contact"> <strong class="h4"></strong>
+                        <p> </br><br /> <strong></strong><a href="tel:8777550023"></a> </p>
                     </div>
                     <div class="col-lg-4 col-md-4 mt-4 f-social"> <a href="/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" class="respo-img" alt="Span Global Services Logo"></a> </div>
                     <div class="col-lg-8 col-md-8 mt-4 footer-contact">
-                        <div class="copyright"> &copy; 2023 Span Global Services - <a href="https://www.championsgroup.com/" target="_blank">A Champions Group Company</a>, All rights reserved. </div>
+                        <div class="copyright"> &copy; 2023 Affluences Business inc - <a href="https://www.championsgroup.com/" target="_blank">A Champions Group Company</a>, All rights reserved. </div>
                     </div>
                 </div>
             </div>
@@ -837,7 +845,7 @@
                             </div>
                             <div class="form-group mt-4"><button type="submit" class="circle-fa">SUBMIT &nbsp; <i class="fa icon ion-android-arrow-forward"></i></button></div>
                         </form>
-                        <div class="text-center"> <a href="/privacy">"Your privacy is important to us"</a> </div>
+                        <div class="text-center"> <a href="/privacy/">"Your privacy is important to us"</a> </div>
                     </div>
                 </div>
             </div>
@@ -886,48 +894,9 @@
             </div>
         </div>
     </div>
-    <div class="CookiesPolicy">
-        <div class="left"> Cookies are stored on your computer to provide you with more personalized services. See our <strong><a href="/privacy">Privacy Policy</a></strong> to know how we collect and manage data. </div>
-        <div class="right">
-        <button class="allow" onclick="setCookie('CookiesPolicyValue', '1', '999')">ALLOW</button> <button class="disallow" onclick="setCookie('CookiesPolicyValue', '0', '1')">NO, THANK YOU</button> </div>
-    </div>
-    <script>
-        function setCookie(cname, cvalue, exdays) {
-            var d = new Date();
-            d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
-            var expires = "expires=" + d.toUTCString();
-            document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
-            console.log("Welcome again ");
-            jQuery(".CookiesPolicy").css("display", "none");
-        }
 
-        function getCookie(cname) {
-            var name = cname + "=";
-            var ca = document.cookie.split(';');
-            for (var i = 0; i < ca.length; i++) {
-                var c = ca[i];
-                while (c.charAt(0) == ' ') {
-                    c = c.substring(1);
-                }
-                if (c.indexOf(name) == 0) {
-                    return c.substring(name.length, c.length);
-                }
-            }
-            return "";
-        }
 
-        function checkCookie() {
-            var CookiesPolicyValue = getCookie("CookiesPolicyValue");
-            if (CookiesPolicyValue != "" && CookiesPolicyValue == 1) {
-                jQuery(".CookiesPolicy").css("display", "none");
-            } else if (CookiesPolicyValue != "" && CookiesPolicyValue == 0) {
-                jQuery(".CookiesPolicy").css("display", "none");
-            } else {
-                jQuery(".CookiesPolicy").css("display", "block");
-            }
-        }
-        window.onload = checkCookie; //document.addEventListener('contextmenu', event => event.preventDefault());
-    </script><a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
     <script src="/static/assets/vendor/jquery/jquery.min.js"></script>
     <script src="/static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="/static/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
